# aswf-sample-project

./: CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  COMMITTERS.csv  CONTRIBUTING.md  CTestConfig.cmake  CTestScript.cmake  GOVERNANCE.md  README-example.md  README.md  SECURITY-example.md  SECURITY.md  SUPPORT.md  azure-pipelines.yml
.github/workflows/: release-notice.yaml  release-notice.yml  repolinter.yml
docs/: index.md
include/: CMakeLists.txt  hello.h.in
maintainers/: fetch_contributors.py
src/: CMakeLists.txt  hello.cpp
tsc/: ccla.md  charter.md  icla.md  project_intake.md
tsc/meetings/: kickoff_meeting_agenda.md  yyyy-mm-dd.md
tsc/process/: codereview.md  deprecation.md  release.md  security.md
